LOG:

         - 1.5.4
		 This release is *NOT* compatible with previous ones: you can't
		 mix 1.5.4 and previous versions in the same environment
		 (message LXC030E will be logged in the event of level
		 mismatch); LIXA_MSG_LEVEL=2

20180413 - 1.5.3 XTA documentation: a dedicated chapter has been added in the
		 official LIXA manual

20180304 - 1.5.2 XTA support for concurrent branches
		 This release is *NOT* compatible with previous ones: you can't
		 mix 1.5.2 and previous versions in the same environment
		 (message LXC030E will be logged in the event of level
		 mismatch)

20171010 - 1.5.1 XTA support for "Suspend/Resume" pattern

20170921 - 1.5.0 Release of XTA API (XA Transaction API)
		 Change of client linkable code (libraries) to LGPL 2.1

20170918 - 1.3.4 Globetom accepts that the license of all LIXA client 
                 code (currently located in directories src/client, 
		 src/common, src/xta) will change to LGPL 2.1.

20170318 - 1.3.4 LIXA Very Stupid Robot (lixavsr) additional use cases:
		- branch for MySQL database
		- branch for PostgreSQL database
		- branch for MySQL & PostgreSQL, MySQL & Oracle DB,
		  PostgreSQL & Oracle DB

20170311 - 1.3.3 LIXA Very Stupid Robot (lixavsr) utility release

20170303 - 1.3.2 Merge of code provided by Globetom in the master tree; 
		support for Transaction Coupling TX feature.
		*** Dropped support for old glib2 versions: ***
		minimum version is now 2.32 (don't upgrade to this LIXA version
		if you are running a glib2 version that's older than 2.32).
		Alternatively, you can install your own copy of glib2 from
		sources.
		These Linux versions are no more tested:
		- Ubuntu 10.04
		- CentOS 6.x
		because they provide a default version for glib2 that's below
		2.32

20170124 - 1.3.1 added more non-standard tx_ interfaces for suspending and
                 resuming global transactions

20161117 - 1.3.0 made interface changes to allow clients to join an existing