@@ -1,14 +1,8 @@
 # XTA (XA Transaction API) case tests
 
-m4_include([xta_8_2.at])
-
-AT_SETUP([exit with error])
-AT_CHECK([/bin/false], [0], [ignore], [ignore])
-AT_CLEANUP
 
 m4_include([xta_1.at])
 m4_include([xta_2.at])
-
 m4_include([xta_3.at])
 m4_include([xta_4.at])
 m4_include([xta_5_0.at])
@@ -17,8 +11,9 @@ m4_include([xta_6.at])
 m4_include([xta_7.at])
 m4_include([xta_8_0.at])
 m4_include([xta_8_1.at])
+m4_include([xta_8_2.at])
 
-AT_SETUP([exit with error])
-AT_CHECK([/bin/false], [0], [ignore], [ignore])
-AT_CLEANUP
+#AT_SETUP([exit with error])
+#AT_CHECK([/bin/false], [0], [ignore], [ignore])
+#AT_CLEANUP
 
